--- a/serverless.yml
+++ b/serverless.yml
@@ -11,9 +11,25 @@ plugins:
   - serverless-offline
 
 functions:  
+  api: 
+    handler: src/api/api.handler 
+    events: 
+      - http: 
+          path: /api
+          method: GET
+          cors: true
   todos:
     handler: src/api/todos.handler
-    
+    events: 
+      - http: 
+          path: /todo
+          method: GET
   todo:
     handler: src/api/todo.handler
-    
+    events: 
+      - http: 
+          path: /todo/{id}
+          method: GET
+          request: 
+            parameters: 
+              id: true
