--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
     "serverless-http": "^1.5.5",
     "serverless-offline": "^3.20.2"
