--- a/serverless.yml
+++ b/serverless.yml
@@ -3,28 +3,27 @@ service: serverless
 provider:
   name: aws
   runtime: nodejs8.10
-  profile: femasters
-  region: us-west-1
-  stage: dev
+  # profile: femasters
+  # region: us-west-1
+  # stage: dev
 
 plugins:
   - serverless-offline
 
 functions:  
+
   api: 
     handler: src/api/api.handler 
     events: 
-      - http: 
-          path: /api
-          method: GET
-          cors: true
-  todos:
+      - http: ANY /
+      -http: 'ANY /{param+}'
+  # todos:
     handler: src/api/todos.handler
     events: 
       - http: 
           path: /todo
           method: GET
-  todo:
+  # todo:
     handler: src/api/todo.handler
     events: 
       - http: 
