--- a/serverless.yml
+++ b/serverless.yml
@@ -4,26 +4,31 @@ provider:
   name: aws
   runtime: nodejs8.10
   profile: femasters
-  region: us-west-1
+  region: us-east-1
   stage: dev
 
 plugins:
   - serverless-offline
 
-functions:  
-  todos:
-    handler: src/api/todos.handler
+functions:
+  api: 
+    handler: src/api/api.handler
     events:
-      - http:
-          path: todo
-          method: get
-  todo:
-    handler: src/api/todo.handler
-    events:
-      - http:
-          path: todo/{todo}
-          method: get
-          request:
-            parameters:
-              paths:
-                todo: true
+      -http: ANY /
+      -http: 'ANY /{param+}'  
+  # todos:
+  #   handler: src/api/todos.handler
+  #   events:
+  #     - http:
+  #         path: todo
+  #         method: get
+  # todo:
+  #   handler: src/api/todo.handler
+  #   events:
+  #     - http:
+  #         path: todo/{todo}
+  #         method: get
+  #         request:
+  #           parameters:
+  #             paths:
+  #               todo: true
